test/errors/mode.rom
Error in `mode.asm` on line 1: Invalid addressing mode
